--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,28 @@
   "manifest_version": 3,
   "name": "Salesforce Case Autofiller",
   "version": "1.0",
-  "description": "Harvey Chandler - Autofill Salesforce cases with predefined templates. Old salesforce",
+  "description": "Harvey Chandler - Autofill Salesforce cases with predefined templates.",
   "action": {
     "default_title": "Autofill Case"
   },
-  "content_scripts": [{
-    "matches": ["*://*/*"],
-    "js": ["content.js"],
-    "all_frames": true,
-    "run_at": "document_idle"
-  }],
   "icons": {
     "256": "icon.png"
   },
-  "permissions": ["activeTab", "scripting"],
-  "host_permissions": ["*://*.salesforce.com/*"],
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.salesforce.com/*"
+      ],
+      "js": ["content.js"],
+      "all_frames": true,
+      "run_at": "document_idle"
+    }
+  ],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "host_permissions": [
+    "*://*.salesforce.com/*",
+    "https://script.google.com/*"
+  ]
 }
